--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sources_non_forked/FastFold"]
 	path = sources_non_forked/FastFold
 	url = https://github.com/Konfekt/FastFold
+[submodule "sources_non_forked/AutoComplPop"]
+	path = sources_non_forked/AutoComplPop
+	url = https://github.com/vim-scripts/AutoComplPop
